--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
+    id 'java'
     id 'org.springframework.boot' version '2.3.4.RELEASE'
     id 'io.spring.dependency-management' version '1.0.10.RELEASE'
-    id 'java'
+
     id 'pl.allegro.tech.build.axion-release' version '1.12.0'
     id 'com.palantir.docker' version '0.25.0'
     id 'com.palantir.docker-run' version '0.25.0'
@@ -42,4 +43,21 @@ dockerRun {
     image imageName
     ports '8080:8080'
     clean true
+}
+
+
+
+aws {
+    region = findProperty('region') ?: 'eu-west-2'
+}
+
+cloudFormation {
+    stackName "$project.name-stack"
+    stackParams([
+            SubnetID: findProperty('subnetId') ?: '',
+            ServiceName: project.name,
+            ServiceVersion: project.version,
+            DockerHubUsername: dockerHubUsernameProperty
+    ])
+    templateFile project.file("ecs.yml")
 }
