--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '2.3.4.RELEASE'
     id 'io.spring.dependency-management' version '1.0.10.RELEASE'
-
     id 'pl.allegro.tech.build.axion-release' version '1.12.0'
     id 'com.palantir.docker' version '0.25.0'
     id 'com.palantir.docker-run' version '0.25.0'
@@ -46,9 +45,8 @@ dockerRun {
 }
 
 
-
 aws {
-    region = findProperty('region') ?: 'eu-west-2'
+    region = findProperty('region') ?: 'us-east-1'
 }
 
 cloudFormation {
